# outreach-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  run.py  run_agent.py  run_daily.py
config/: context.md  email_1.md  followup_1.md  followup_2.md  lead_gen.yaml  settings.yaml  templates.md
data/: leads_example.xlsx  search_journal.md
docs/plans/: 2026-01-14-outreach-boilerplate-design.md  2026-01-14-outreach-boilerplate-implementation.md  2026-01-20-agentic-discovery-design.md  2026-01-20-agentic-discovery-implementation.md  2026-01-20-lead-generation.md  2026-01-21-project-reorganization-design.md  2026-01-21-project-reorganization-implementation.md  2026-01-21-readme-setup-instructions-design.md  2026-01-21-readme-setup-instructions-impl.md  2026-01-21-template-reference-migration.md  2026-01-22-slack-notification-implementation.md  2026-01-22-slack-notification-redesign.md  lead-generation-plan.md
leads/: .gitkeep
scripts/: run_discovery.sh  setup_supabase.sql
src/: __init__.py  apollo.py  cli.py  composer.py  config.py  db.py  enricher.py  fb_ads.py  importer.py  lead_generator.py  scheduler.py  sender.py  supabase_client.py
src/agents/: discovery_agent.py
src/clients/: __init__.py  apollo.py
src/core/: __init__.py  cli.py  config.py  db.py
src/discovery/: __init__.py  agent.py  (+2 more)
tests/: __init__.py  test_apollo.py  test_cli.py  test_composer.py  test_config.py  test_db.py  test_embedding_service.py  test_enricher.py  test_fb_ads.py  test_importer.py  test_lead_generator.py  test_sender.py  test_supabase_client.py
(+35 files in other folders)
