[project]
name = "outreach-boilerplate"
version = "0.1.0"
description = "Humor-first cold email outreach CLI"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.40.0",
    "composio>=0.10.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk>=0.1.0",
    "supabase>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
outreach = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
